[package]
name = "grammar-induction"
version = "0.1.0"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"

[lib]
name = "grammar_induction"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.13", features = ["extension-module"]}
itertools = "0.10"
rand = "0.8"
rustc-hash = "1.1"
float-ord = "0.3"
serde = {version = "1.0", features = ["derive"]}
pythonize = "0.13"
serde_json = "1.0"
rayon = "1.5"