[package]
name = "grammar-induction"
version = "0.1.0"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"

[dependencies]
itertools = "0.10"
rand = "0.8"
rustc-hash = "1.1"
float-ord = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rayon = "1.5"
smallvec = "1.6"
indicatif = "0.15"
log = "0.4"
env_logger = "0.8"

[profile.release]
debug = true