[package]
name = "python-bindings"
version = "0.1.0"
authors = ["Will Crichton <wcrichto@cs.stanford.edu>"]
edition = "2018"

[lib]
name = "grammar_induction"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {version = "0.13", features = ["extension-module"]}
pythonize = "0.13"
grammar-induction = { path = ".." }

